<resources>
    <string name="app_name">MTKLogger</string>
    <string name="notification_title_network">Network log</string>
    <string name="notification_title_mobile">Mobile log</string>
    <string name="notification_title_modem">Modem log</string>
    <string name="notification_title_met">MET log</string>
    <string name="notification_title_gps">GPS log</string>
    <string name="notification_title">MTKLogger is running</string>
    <string name="notification_on_summary_suffix">is on.</string>
    <string name="notification_on_summary_suffixes">are on.</string>
    <string name="notification_off_summary_suffix">is off.</string>
    <string name="notification_off_summary_suffixes">are off.</string>
    <string name="notification_nearly_out_of_storage">Log storage is running out.</string>
    <string name="notification_out_of_storage_summary">Click to get more information.</string>
    <string name="network_log_name">NetworkLog</string>
    <string name="mobile_log_name">MobileLog</string>
    <string name="modem_log_name">ModemLog</string>
    <string name="modem_log_name1">ModemLog1</string>
    <string name="modem_log_name2">ModemLog2</string>
    <string name="modem_log_name3">ModemLog3</string>
    <string name="modem_log_name4">ModemLog4</string>
    <string name="modem_log_name5">ModemLog5</string>
    <string name="modem_log_name6">ModemLog6</string>
    <string name="modem_log_name7">ModemLog7</string>
    <string name="modem_log_name8">ModemLog8</string>
    <string name="met_log_name">METLog</string>
    <string name="gps_log_name">GPSLog</string>
    <string name="dual_modem_log_name">DualModemLog</string>
    <string name="ext_modem_log_name">ExtModemLog</string>
    <string name="tag_log_name">TagLog</string>
    <string name="menu_settings">Settings</string>
    <string name="mobilelog_unselected">There is no type of mobilelog seleted, it will not be started!</string>
    <string name="no_log_on">There is no log on!</string>
    <string name="log_path_str">Log path</string>
    <string name="log_used_storage">Used</string>
    <string name="log_free_storage">Free</string>
    <string name="log_start">%s recording</string>
    <string name="log_stop">%s stopped</string>
    <string name="log_unselected">%s disabled</string>
    <string name="time_default">0:00:00</string>
    <string name="log_path_type_label_unknown">Unknown</string>
    <string name="log_path_type_label_sd">SD Card</string>
    <string name="log_path_type_label_emmc">Phone storage</string>
    <string name="log_path_type_label_modemlog_2_sd">Modem Log to SD Card</string>
    <string name="log_path_type_label_data">Internal storage</string>
    <string name="log_path_not_exist">The storage path %s is not exist!</string>
    <string name="low_storage_warning_dialog_title">Low Storage Warning</string>
    <string name="low_storage_warning_dialog_msg">The free space is lower than %dM, please clear storage otherwise logs will stop automaticly soon!</string>
    <string name="waiting_dialog_title_start_log">Starting logs</string>
    <string name="waiting_dialog_message_start_log">Waiting for starting logs...</string>
    <string name="waiting_dialog_title_stop_log">Stopping logs</string>
    <string name="waiting_dialog_message_stop_log">Waiting for stopping logs...</string>
    <string name="waiting_dialog_title_poll_log">Polling logs</string>
    <string name="waiting_dialog_message_poll_log">Waiting for polling logs...</string>
    <string name="waiting_dialog_title_flush_log">Flushing logs</string>
    <string name="waiting_dialog_message_flush_log">Waiting for flushing logs...</string>
    <string name="waiting_service_dialog_message">Waiting log initiation...</string>
    <string name="waiting_checking_log_dialog_message">Checking log files...</string>
    <string name="general_settings_title">General Settings</string>
    <string name="advanced_settings_title">Advanced settings</string>
    <string name="enable_tag_log_title">Enable Tag Log</string>
    <string name="enable_tag_log_summary">Enable or disable tag log function</string>
    <string name="enable_exception_reporter_title">Enable Exception Reporter</string>
    <string name="enable_exception_reporter_summary">Enable or disable Exception Reporter</string>
    <string name="enable_ui_debug_mode_title">Enable UI Debug Mode</string>
    <string name="enable_ui_debug_mode_summary">Enable or disable UI Debug Mode</string>
    <string name="log_storage_location_title">Log storage location</string>
    <string name="run_command_title">Run Command</string>
    <string name="run_command_summary">You could write shell command here</string>
    <string name="run_exception_history">Open Exception History</string>
    <string name="run_exception_history_summary">You could open Exception History to view exceprion report list.</string>
    <string name="warning_no_permission_for_setting">Only device owner can modify log configurations.</string>
    <string name="limit_single_log_size_title">Limit Current Log Size(MB)</string>
    <string name="limit_single_log_size_summary">Recycle current recording log when it reaches the limit log size</string>
    <string name="limit_single_log_size_dialog_message" formatted="false">The limit size of current recording %s should be between %dMB and %dMB(Size of %s).</string>
    <string name="limit_total_log_size_title">Limit Total Log Size(MB)</string>
    <string name="limit_total_log_size_summary">Total recorded log (include past ones) will not exceed this size</string>
    <string name="limit_total_log_size_dialog_message" formatted="false">The limit size of total recorded %s should not smaller than %sMB(Size of current log).</string>
    <string name="enable_met_log_title">Enable MET Log</string>
    <string name="enable_met_log_summary">Enable or disable MET log function</string>
    <string name="metlog_settings">METLog Settings</string>
    <string name="metlog_period_title">Period time(ms)</string>
    <string name="metlog_period_summary">Set METLog period time</string>
    <string name="metlog_cpu_buffer_title">CPU Buffer(KB)</string>
    <string name="metlog_cpu_buffer_summary">Set METLog CPU Buffer size</string>
    <string name="limit_met_log_size_dialog_message" formatted="false">The limit log size of current recording %s should be between %d MB and %d MB.</string>
    <string name="limit_period_dialog_message" formatted="false">The splice period duration time of %s should be between %d ms and %d ms.</string>
    <string name="limit_cpu_buffer_dialog_message" formatted="false">The ftrace buffer size of %s should be between %d KB and %d KB.</string>
    <string name="enable_gpslog">Enable GPS Log</string>
    <string name="enable_gps_log_summary">Enable or disable GPS log function</string>
    <string name="gpslog_settings">GPSLog Settings</string>
    <string name="limit_gps_log_size_dialog_message" formatted="false">The limit log size of current recording %s should be between %d MB and %d MB.</string>
    <string name="log_path_title">Log Save Path</string>
    <string name="log_path_summary">Set log path</string>
    <string name="default_gps_path_value">1</string>
    <string name="mobilelog_settings">MobileLog Settings</string>
    <string name="enable_mobilelog">Enable MobileLog</string>
    <string name="enable_android_log_title">Android Log</string>
    <string name="enable_android_log_summary">Enable or disable android log</string>
    <string name="enable_kernel_log_title">Kernel Log</string>
    <string name="enable_kernel_log_summary">Enable or disable kernel log</string>
    <string name="enable_bluetooth_log_title">Bluetooth Log</string>
    <string name="enable_bluetooth_log_summary">Enable or disable bluetooth log</string>
    <string name="enable_md32_log_title">MD32 Log</string>
    <string name="enable_md32_log_summary">Enable or disable MD32 log</string>
    <string name="enable_atf_log_title">ATF Log</string>
    <string name="enable_atf_log_summary">Enable or disable ATF Log</string>
    <string name="limit_log_size_title">Limit Log Size(MB)</string>
    <string name="limit_log_size_summary">Recycle log when it reaches the limit log size</string>
    <string name="limit_log_size_dialog_message" formatted="false">The limit size of %s should be between %dMB and %dMB(Size of %s).</string>
    <string name="start_automatically_title">Start Automatically</string>
    <string name="start_automatically_mobile_summary">Start Mobile Log automatically when next bootup</string>
    <string name="modemlog_settings">ModemLog Settings</string>
    <string name="enable_modemlog">Enable ModemLog</string>
    <string name="log_mode_title">Log Mode</string>
    <string name="log_mode_summary">Set modem log mode</string>
    <string name="start_automatically_modem_summary">Start Modem Log automatically when restart or switch modem</string>
    <string name="reset_automatically_modem_title">Reset Modem Automatically</string>
    <string name="reset_automatically_modem_summary">Reset Modem automatically after EE happened</string>
    <string name="monitor_modme_abnormal_event_title">Monitor Modem Abnormal Event</string>
    <string name="monitor_modme_abnormal_event_summary">When modem abnormal event happened, will do smart logging automatically</string>
    <string name="networklog_settings">NetworkLog Settings</string>
    <string name="enable_networklog">Enable NetworkLog</string>
    <string name="start_automatically_network_summary">Start Network Log automatically when next bootup</string>
    <string name="networklog_ping_title">Enable environment check</string>
    <string name="networklog_ping_summary">Check network running environment at stopping time. This may take a few seconds.</string>
    <string name="networklog_limit_package_enabler">Enable package limitation</string>
    <string name="networklog_limit_package_enabler_summary">"Check to limit each network log package's size to the given value"</string>
    <string name="networklog_limit_package_size">Limited package size</string>
    <string name="networklog_limit_package_size_summary">Each package size will not exceed this value</string>
    <string name="networklog_limit_package_size_note">"Set each package's limited size between 0 and 65535."</string>
    <string name="title_activity_log_folder_list">Clear MTKLog Files</string>
    <string name="cancel_menu">Cancel</string>
    <string name="clear_all_menu">Clear All</string>
    <string name="clear_all_dlg_title">Clear All</string>
    <string name="message_delete_all_log">Clear all logs?</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="clear_dialog_title">Clearing log</string>
    <string name="clear_dialog_content">Please wait for a moment...</string>
    <string name="selected_item_count">%d selected</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_unselect_all">Unselect all</string>
    <string name="menu_clear">Clear</string>
    <string name="clear_non_selected_item">Please select at least one of the log folder!</string>
    <string name="clear_dlg_title">Clear</string>
    <string name="message_deletelog">Clear the selected logs?</string>
    <string name="error_deamon_unable">NativeUnable</string>
    <string name="error_storage_not_ready">Storage is not ready yet</string>
    <string name="error_storage_full">Storage is full</string>
    <string name="error_send_cmd_fail">Send command fail</string>
    <string name="error_deamon_die">Native is dead</string>
    <string name="error_unsupport_log">Unsupported log type</string>
    <string name="error_storage_unavailable">Log storage is no available any more.</string>
    <string name="error_log_folder_deleted">Current running log folder was lost.</string>
    <string name="error_cmd_timeout">Command timeout.</string>
</resources>