<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/gps_log_name" android:key="gpslog_preference_screen"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/gpslog_settings" android:key="gpslog_category">
        <CheckBoxPreference android:title="@string/enable_gpslog" android:key="gpslog_switch" android:defaultValue="true" />
    </PreferenceCategory>
    <ListPreference android:entries="@array/log_path_list_preference" android:title="@string/log_path_title" android:key="save_log_path" android:summary="@string/log_path_summary" android:defaultValue="@string/default_gps_path_value" android:dialogTitle="@string/log_path_title" android:entryValues="@array/log_path_value_list_preference" />
</PreferenceScreen>